<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegister.SignUpActivity"
    android:background="@drawable/layout2">


    <TextView
        android:id="@+id/signuplabel"
        android:layout_width="108.4dp"
        android:layout_height="35.4dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="216dp"
        android:text="@string/signuplabel_string"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/firstname_view"
        android:layout_width="332dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/firstname_view_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuplabel" />

    <TextView
        android:id="@+id/first_name_"
        android:layout_width="109.6dp"
        android:layout_height="20.6dp"
        android:layout_marginStart="16dp"
        android:text="@string/first_name__string"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/firstname_view"
        app:layout_constraintTop_toTopOf="@+id/firstname_view" />

    <EditText
        android:id="@+id/firstname_edittext"
        android:layout_width="290.6dp"
        android:layout_height="35.6dp"

        android:hint="@string/firstname_edittext_string"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/firstname_view"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="@+id/firstname_view"
        app:layout_constraintTop_toBottomOf="@+id/first_name_" />

    <View
        android:id="@+id/lastname_view"
        android:layout_width="332dp"
        android:layout_height="57dp"
        android:layout_below="@+id/firstname_view"
        android:layout_marginTop="16dp"
        android:background="@drawable/lastname_view_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname_view" />

    <TextView
        android:id="@+id/last_name_"
        android:layout_width="109.6dp"
        android:layout_height="20.6dp"
        android:layout_marginStart="16dp"
        android:text="@string/last_name__string"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/lastname_view"
        app:layout_constraintTop_toTopOf="@+id/lastname_view" />

    <EditText
        android:id="@+id/lastname_edittext"
        android:layout_width="290.6dp"
        android:layout_height="37.6dp"

        android:hint="@string/lastname_edittext_string"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/lastname_view"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="@+id/lastname_view"
        app:layout_constraintTop_toBottomOf="@+id/last_name_" />

    <View
        android:id="@+id/workemail_view"
        android:layout_width="332dp"
        android:layout_height="57dp"
        android:layout_below="@+id/lastname_view"
        android:layout_marginTop="16dp"
        android:background="@drawable/workemail_view_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname_view" />

    <TextView
        android:id="@+id/work_email_"
        android:layout_width="109.6dp"
        android:layout_height="20.6dp"
        android:layout_marginStart="16dp"
        android:text="@string/work_email__string"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/workemail_view"
        app:layout_constraintTop_toTopOf="@+id/workemail_view" />

    <EditText
        android:id="@+id/work_email_editext"
        android:layout_width="290.6dp"
        android:layout_height="37.6dp"

        android:hint="@string/email_editext_string"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/workemail_view"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="@+id/workemail_view"
        app:layout_constraintTop_toBottomOf="@+id/work_email_" />

    <View
        android:id="@+id/password_view"
        android:layout_width="332dp"
        android:layout_height="58dp"
        android:layout_below="@+id/workemail_view"
        android:layout_marginTop="16dp"
        android:background="@drawable/password_view_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workemail_view" />

    <TextView
        android:id="@+id/password_"
        android:layout_width="109.6dp"
        android:layout_height="20.6dp"
        android:layout_marginStart="16dp"
        android:text="@string/password__string"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/password_view"
        app:layout_constraintTop_toTopOf="@+id/password_view" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/password_view"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="@+id/password_view"
        app:layout_constraintTop_toBottomOf="@+id/password_">
        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="290.6dp"
            android:layout_height="41dp"

            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/show_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/password_edittext"
            android:layout_alignTop="@+id/password_edittext"
            android:layout_alignEnd="@+id/password_edittext"
            android:layout_alignBottom="@+id/password_edittext"
            android:background="@color/white"
            android:src="@drawable/view1"
            app:layout_constraintBottom_toBottomOf="@+id/password_edittext"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext"
            app:layout_constraintHorizontal_bias="0.884"
            app:layout_constraintStart_toStartOf="@+id/password_edittext"
            app:layout_constraintTop_toTopOf="@+id/password_edittext"
            app:layout_constraintVertical_bias="0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/confirmpassword_view"
        android:layout_width="332dp"
        android:layout_height="57dp"
        android:layout_below="@+id/password_view"
        android:layout_marginTop="16dp"
        android:background="@drawable/confirmpassword_view_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_view" />

    <TextView
        android:id="@+id/confirm_password_"
        android:layout_width="157.6dp"
        android:layout_height="20.6dp"
        android:layout_marginStart="16dp"
        android:text="@string/confirm_password__string"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/confirmpassword_view"
        app:layout_constraintTop_toTopOf="@+id/confirmpassword_view" />

    <EditText
        android:id="@+id/confirmpassword_edittext"
        android:layout_width="290.6dp"
        android:layout_height="36.6dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/confirmpassword_view"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="@+id/confirmpassword_view"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_" />


    <Button
        android:id="@+id/request_button"
        android:layout_width="226dp"
        android:layout_height="57dp"
        android:layout_below="@+id/confirmpassword_view"
        android:layout_marginTop="64dp"
        android:background="@drawable/request_button"
        android:text="Sign Up"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword_view" />

    <Button
        android:id="@+id/already_have_an_account_Button"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request_button"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="#02FFFFFF"
        android:text="@string/already_have_an_account__string"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_button" />

    <ProgressBar
        android:id="@+id/signup_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_button" />
</androidx.constraintlayout.widget.ConstraintLayout>