<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegister.SignInActivity"
    android:background="@drawable/signin">

    <TextView
        android:id="@+id/signuplabel"
        android:layout_width="108.4dp"
        android:layout_height="35.4dp"
        android:layout_marginTop="320dp"
        android:text="@string/signinlabel_string"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/workemail_view"
        android:layout_width="330dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/workemail_view_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuplabel" />

    <TextView
        android:id="@+id/work_email_"
        android:layout_width="109.6dp"
        android:layout_height="20.6dp"
        android:text="@string/work_email__string"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/workemail_view"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="@+id/workemail_view"
        app:layout_constraintTop_toTopOf="@+id/workemail_view" />

    <EditText
        android:id="@+id/email_editext"
        android:layout_width="290.6dp"
        android:layout_height="37.6dp"
        android:alpha="0.25"
        android:hint="@string/email_editext_string"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/workemail_view"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="@+id/workemail_view"
        app:layout_constraintTop_toBottomOf="@+id/work_email_" />

    <View
        android:id="@+id/password_view"
        android:layout_width="330dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/password_view_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workemail_view" />

    <TextView
        android:id="@+id/password_"
        android:layout_width="109.6dp"
        android:layout_height="20.6dp"
        android:text="@string/password__string"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/password_view"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="@+id/password_view"
        app:layout_constraintTop_toTopOf="@+id/password_view" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="290.6dp"
        android:layout_height="37.6dp"
        android:alpha="0.25"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/password_view"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="@+id/password_view"
        app:layout_constraintTop_toBottomOf="@+id/password_" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/request_button"
        android:text="Login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_view" />

    <Button
        android:id="@+id/dont_have_an_account_Button"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:background="#02FFFFFF"
        android:text="@string/dont_have_an_account__string"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>